--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({
-          google_ad_client: "ca-pub-9876275258444216",
+          google_ad_client: "",
           enable_page_level_ads: true
      });
 </script>
